--- a/ticket.html
+++ b/ticket.html
@@ -118,7 +118,7 @@
 <footer><a href="https://twitter.com/adityasingh7715" target="_blank"><i class="icon-social-twitter icons"></i></a><a href="https://github.com/healer-op" target="_blank"><i class="icon-social-github icons"></i></a><a href="index.html" ><i class="icon-social-dribbble icons"></i></a></footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js" integrity="sha512-01CJ9/g7e8cUmY0DFTMcUw/ikS799FHiOA0eyHsUWfOetgbx/t6oV4otQ5zXKQyIrQGTHSmRVPIgrgLcZi/WMA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="http://cdn.jsdelivr.net/g/filesaver.js"></script>
+<script src="https://cdn.jsdelivr.net/g/filesaver.js"></script>
 <script src="render.js"></script>
 </body>
 </html>
