--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ticket.healdb.me" />
-    <meta property="og:title" content="Your Known Has Gifted You A Virtual Happy Diwali Card" />
+    <meta property="og:title" content="Hogwarts Express | Tickets" />
     <meta property="og:description" content="Generate Hogwarts Express Tickets 🚂 , Dont Forget Your Wands" />
     <meta property="og:image" content="https://user-images.githubusercontent.com/65026164/140315397-59a2206b-7499-4339-a8b8-861a608d3dcd.png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://ticket.healdb.me" />
-    <meta property="twitter:title" content="Your Known Has Gifted You A Virtual Happy Diwali Card" />
+    <meta property="twitter:title" content="Hogwarts Express | Tickets" />
     <meta property="twitter:description" content="Generate Hogwarts Express Tickets 🚂 , Dont Forget Your Wands" />
     <meta property="twitter:image" content="https://user-images.githubusercontent.com/65026164/140315397-59a2206b-7499-4339-a8b8-861a608d3dcd.png" />
 
