--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h6>🧔🏻 Project By <a href="https://github.com/healer-op">Healer</a></h6>
             </div>
             <div class="right">
-                <form action="/ticket.html">
+                <form action="/Hogwarts-Express-Tickets/ticket.html">
                     <h6>🎟️Generate Ticket</h6>
                     <label for="name">Name:</label><br>
                     <input type="text" id="name" name="name" value="Healer"><br>
